# nothingness

./: .gitignore  .gitmodules  .metadata  AGENTS.md  README.md  SLOC.md  analysis_options.yaml  flutter_launcher_icons.yaml  goal-sloc.md  pubspec.yaml  pyproject.toml  test_hooks.dart  tool_scale_test.dart
.cursor/rules/: documentation.mdc  flutter-best-practices.mdc  flutter-commands.mdc  github-actions-polling.mdc  rule-creation.mdc  testing-standards.mdc
.github/: copilot-instructions.md
.github/agents/: qa.md  terra.md
.github/workflows/: build-android.yml  ci.yml  emulator-power-regression.yml  release.yml
_archive/ui-revamp/: README.md
_ui_revamp/: bugs.md  intent.md  plan.md  qa_report.md
_ui_revamp/drive/: .vm_ws.txt  drive.py
_ui_revamp/icons/: gallery.html
_ui_revamp/ui_structure_rethinking/: v6_monk.html
android/: .gitignore  build.gradle.kts  gradle.properties
android/app/: build.gradle.kts  proguard-rules.pro
assets/images/: polo.heic
dev/: agent_service.dart  fake_audio_transport.dart  main_debug.dart  main_test.dart  playback_diagnostics.dart  test_harness.dart  test_overlay.dart
docs/: README.md  agent-driven-debugging.md  android-policy-mute-investigation.md  backlog.md  backlog_done.md  cicd.md  device-testing.md  emulator-power-diagnostics.md  oppo-find-n5-playback-session-stuck.md  redesign.md  regression-testing-playbook.md  single-backend-simplification.md  soloud-android-fallback.md
docs/architecture/: audio-playback-spectrum.md  idempotent-playback-refactor-plan.md  library-browsing.md  overview.md  skins.md  ui-scaling.md
docs/zeekr/: zeekr-dhu-status-bar-contrast.md  zeekr-os-6.7-media-buttons-investigation.md  zeekr-os-6.7-reversible-adb-workaround-plan.md
evals/: plan.md
integration_test/: audio_interruption_test.dart  missing_track_consistency_test.dart
lib/: debug_hooks.dart  main.dart  main_test.dart
lib/controllers/: library_controller.dart
lib/models/: audio_track.dart  browser_presentation.dart  eq_settings.dart  log_entry.dart  operating_mode.dart  screen_config.dart  song_info.dart  spectrum_settings.dart  supported_extensions.dart  theme_id.dart  theme_variant.dart  transport_position.dart
lib/providers/: audio_player_provider.dart
linux/: CMakeLists.txt
soloud/: pubspec.yaml
soloud/ios/: CMakeLists.txt  build_cmake.sh
soloud/ios/flutter_soloud/Sources/flutter_soloud/: miniaudio_objc_prefix.h
test/: README.md  main_bootstrap_test.dart  p6_adversarial_test.dart  widget_test.dart
test_local_models/: notes.md  report.md
tmp/: dispatch_probe_log.txt  live_play_tap_log.txt  live_state_poll.txt  pre_tap_media_session.txt
tool/: sloc.sh
ui_ideas/: costs.md
(+263 files in other folders)
